--- a/lib/projects.json
+++ b/lib/projects.json
@@ -1,62 +1,75 @@
 [
     {
-        "title": "Lorem ipsum dolor sit.",
-        "image": "https://vis-society.github.io/labs/2/images/empty.svg",
-        "description": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor veritatis molestias excepturi neque sapiente ipsam, sunt libero quidem rem quasi itaque ratione sint impedit saepe, tempora perspiciatis voluptas. Ipsa, eaque?"
+  
+      "title": "National Power Outage Duration Predictor",
+      "year": "2024",
+      "image": "https://vis-society.github.io/labs/2/images/empty.svg",
+      "description": "Used statistical tests and regression models to predict power outage durations across the U.S. based on environmental and infrastructure factors."
     },
     {
-        "title": "Quos voluptate ut necessitatibus.",
-        "image": "https://vis-society.github.io/labs/2/images/empty.svg",
-        "description": "Pariatur a laudantium perspiciatis impedit totam similique adipisci voluptate aliquid incidunt facilis dolor necessitatibus quaerat vero dignissimos praesentium dolore, veniam cumque libero deserunt, assumenda corporis! Officia quisquam sed fuga non."
+      "title": "Taylor Swift Song Recommender",
+      "year": "2023",
+      "image": "https://vis-society.github.io/labs/2/images/empty.svg",
+      "description": "Built a tool using Spotify audio features and Genius lyrics API to recommend songs and enable lyrical search."
     },
     {
-        "title": "Ex blanditiis voluptatem eligendi.",
-        "image": "https://vis-society.github.io/labs/2/images/empty.svg",
-        "description": "Neque quaerat magnam atque maiores quo modi ducimus voluptatem velit laborum illo explicabo, ad nam reiciendis cum sint. Animi, doloribus velit. Vero eaque quis dolore sint hic, perspiciatis magni dolores."
+      "title": "Image Processing App with KNN Classifier",
+      "year": "2022",
+      "image": "https://vis-society.github.io/labs/2/images/empty.svg",
+      "description": "Created an app that classifies images using KNN, RGB processing, and Python\u2019s Pillow and tkinter libraries."
     },
     {
-        "title": "Velit maxime eos officiis!",
-        "image": "https://vis-society.github.io/labs/2/images/empty.svg",
-        "description": "Exercitationem explicabo repudiandae fugit unde, iure veritatis quia delectus rem, eaque asperiores magni a qui modi commodi distinctio labore corrupti? Recusandae blanditiis, magni dicta cumque in possimus saepe esse asperiores."
+      "title": "Meteorite Data Visualization",
+      "year": "2023",
+      "image": "https://vis-society.github.io/labs/2/images/empty.svg",
+      "description": "Visualized NASA meteorite landings using folium maps and statistical analysis to explore global impact trends."
     },
     {
-        "title": "Aliquam quasi incidunt laborum?",
-        "image": "https://vis-society.github.io/labs/2/images/empty.svg",
-        "description": "Voluptas dolorem id omnis, inventore optio laudantium architecto labore dolore ex quidem? Officia, totam possimus. Facere ipsa dolor corrupti optio laboriosam, veritatis eligendi a ipsam modi minus dolorem cumque aperiam?"
+      "title": "AI Waste Sorting Robot",
+      "year": "2019",
+      "image": "https://vis-society.github.io/labs/2/images/empty.svg",
+      "description": "Designed a Raspberry Pi-powered robot to detect and sort recyclables using image classification."
     },
     {
-        "title": "Explicabo dolorem vero labore!",
-        "image": "https://vis-society.github.io/labs/2/images/empty.svg",
-        "description": "Eius aspernatur accusamus consectetur quidem maiores obcaecati provident similique reprehenderit quae cum illo consequuntur nemo dolorem repellendus, et aperiam odio iste quia facilis fugit excepturi. Possimus assumenda maxime laborum distinctio?"
+      "title": "FIRST Robotics YouTube Crash Course",
+      "year": "2020",
+      "image": "https://vis-society.github.io/labs/2/images/empty.svg",
+      "description": "Launched a 106-video series teaching robotics, CAD, and physics, viewed over 74,000 times by global audiences."
     },
     {
-        "title": "Recusandae culpa accusamus repellendus?",
-        "image": "https://vis-society.github.io/labs/2/images/empty.svg",
-        "description": "Aut facilis possimus consequuntur placeat facere? Perspiciatis possimus reprehenderit aliquid eaque minima nemo sit nulla blanditiis illo, doloribus similique illum, quae repellendus impedit minus non quos officia ipsam vitae! Nemo?"
+      "title": "AI for Conservation Curriculum",
+      "year": "2023",
+      "image": "https://vis-society.github.io/labs/2/images/empty.svg",
+      "description": "Co-designed a STEM curriculum focusing on AI and sustainability, now implemented in 10+ schools."
     },
     {
-        "title": "Laudantium doloremque modi cum.",
-        "image": "https://vis-society.github.io/labs/2/images/empty.svg",
-        "description": "Neque dolorum modi nisi optio at est et quasi provident dignissimos dolor nesciunt voluptatem harum tenetur reprehenderit, totam omnis, nostrum minus ea error, ducimus voluptate. Iusto quasi quaerat atque qui."
+      "title": "Shang Lab GoalEX NLP Research",
+      "year": "2024",
+      "image": "https://vis-society.github.io/labs/2/images/empty.svg",
+      "description": "Worked on explainable AI by clustering documents using hierarchical language embeddings and OpenAI APIs."
     },
     {
-        "title": "Quis ullam facilis officia?",
-        "image": "https://vis-society.github.io/labs/2/images/empty.svg",
-        "description": "Non vero ipsa provident voluptatum quidem atque consectetur iste suscipit reprehenderit laboriosam ab nobis ipsam mollitia tenetur numquam, pariatur reiciendis eius optio? Unde dolore molestias incidunt soluta, dolor commodi repudiandae."
+      "title": "Product Usage Insights for After Hours",
+      "year": "2023",
+      "image": "https://vis-society.github.io/labs/2/images/empty.svg",
+      "description": "Analyzed survey and engagement data to identify user retention patterns and inform marketing strategies."
     },
     {
-        "title": "Dicta eum ipsum adipisci.",
-        "image": "https://vis-society.github.io/labs/2/images/empty.svg",
-        "description": "Eius asperiores modi, nam voluptatum mollitia fugiat dignissimos nostrum, reiciendis dolorem porro quam vel aliquam id perspiciatis est. Culpa accusantium officia pariatur iure recusandae autem suscipit cum doloremque omnis delectus."
+      "title": "FTC Robotics Elective Program",
+      "year": "2024",
+      "image": "https://vis-society.github.io/labs/2/images/empty.svg",
+      "description": "Developed and led a full-semester robotics elective in local schools, increasing student interest in STEM."
     },
     {
-        "title": "Doloribus expedita nostrum incidunt.",
-        "image": "https://vis-society.github.io/labs/2/images/empty.svg",
-        "description": "Blanditiis, voluptates maiores, itaque odio ad cupiditate optio quisquam sint adipisci officiis praesentium! Beatae eius non quisquam similique! Neque eius error illum velit sit pariatur hic. Repudiandae maxime eum quam."
+      "title": "GitHub API Integration",
+      "year": "2024",
+      "image": "https://vis-society.github.io/labs/2/images/empty.svg",
+      "description": "Connected GitHub\u2019s API to display real-time profile stats like followers, repos, and gists on portfolio site."
     },
     {
-        "title": "Animi iure illum excepturi.",
-        "image": "https://vis-society.github.io/labs/2/images/empty.svg",
-        "description": "Nam hic incidunt, quasi voluptatibus accusamus placeat consequatur! Aliquam voluptatem sint deserunt ab enim hic, laboriosam fugit magni repellat aperiam veritatis quod magnam provident dignissimos expedita pariatur maxime molestias rem."
+      "title": "World Economic Forecasting with Time Series",
+      "year": "2017",
+      "image": "https://vis-society.github.io/labs/2/images/empty.svg",
+      "description": "Led a FinTech project modeling trends across global powers using predictive time series analysis."
     }
-]
+  ]
