--- a/lib/projects.json
+++ b/lib/projects.json
@@ -37,7 +37,7 @@
         "title": "DS3: World Economic Forecasting with Time Series",
         "year": "2017",
         "image": "https://gmk.center/wp-content/uploads/2023/09/shutterstock_2154195865-1.png",
-        "description": "In this FinTech-focused research project, I joined a team at UCSD’s Data Science Student Society to forecast macroeconomic indicators like GDP growth and inflation for countries like the U.S., China, and India. We gathered data from global sources like the IMF and World Bank, cleaned it, and built time series models using ARIMA and exponential smoothing techniques. I helped visualize trends and compare model performance using dashboards. This project strengthened my skills in predictive modeling, collaboration, and making economic data digestible for a broader audience."
+        "description": "Working with a group at UCSD's Data Science Student Society on this FinTech-oriented research project, I predicted macroeconomic variables including GDP growth and inflation for nations including the United States, China, and India. From worldwide sources including the IMF and World Bank, we collected data, cleaned it, and created time series models applying ARIMA and exponential smoothing techniques. Dashboards helped me to see trends and contrast model performance. Predictive modeling, teamwork, and simplifying economic data for a larger audience were all areas in which this initiative enhanced my abilities."
       },
     {
         "title": "Recusandae culpa accusamus repellendus?",
