--- a/lib/projects.json
+++ b/lib/projects.json
@@ -1,72 +1,75 @@
 [
-    {
-
-        "title": "National Power Outage Duration Predictor",
-        "year": "2024",
-        "image": "https://media.wired.com/photos/61857ab5c4b863206a589936/master/pass/Gear-Prepare-for-Blackouts-1155510644.jpg",
-        "description": "I examined national power outage statistics for this initiative and applied regression models to forecast how long outages will continue depending on environmental and infrastructure elements including storm type, area, and utility company. I gathered data from FEMA, NOAA, and the U.S. Energy Information Administration, cleaned and combined the databases, and ran statistical tests to confirm theories. Using Python tools such as Seaborn and Plotly, I also displayed important results, which helped to highlight geographical differences and trends over time."
-
-      },
-      {
-        "title": "Taylor Swift Song Recommender",
-        "year": "2023",
-        "image": "https://s.yimg.com/ny/api/res/1.2/v6jVZokFHxbK7LoLHYaCkA--/YXBwaWQ9aGlnaGxhbmRlcjt3PTEyNDI7aD04ODM-/https://media.zenfs.com/en/men_s_journal_718/1565836d167d280f0e0e5e78d849b6ff",
-        "description": "Based on a user's mood or lyric preferences, I built a fun and tailored recommendation tool that recommends Taylor Swift songs. Using the Spotify API, I collected audio characteristics including tempo, energy, and danceability; I also included the Genius API so users could look up lyrics. To hone the suggestions, I used mood-based filters and cosine similarity. The project not only showed me how to use outside APIs but also provided me with knowledge creating algorithms linking human preferences with data. It was a fantastic opportunity to combine technical skills with imagination."
-      },
-      {
-        "title": "Geospatial Analysis",
-        "year": "2022",
-        "image": "https://nicholas.duke.edu/sites/default/files/styles/rectangle_765x500/public/images/GIS%20wildland%20fire%20potential%20map.jpg?itok=Tep43LCK",
-        "description": "Mapping environmental risk indices—such as air pollution, water quality, and health inequalities—across San Diego census tracts was my responsibility in this research. Starting with environmental and public health data, I used Principal Component Analysis (PCA) to lower dimensionality while maintaining significant patterns across variables. To show local level differences, I created interactive maps using OpenStreetMap and Leaflet among other mapping tools."
-      },
-      {
-        "title": "Meteorite Data Visualization",
-        "year": "2023",
-        "image": "https://news.fullerton.edu/app/uploads/2023/02/Mars-meteorite-800x500.jpg",
-        "description": "Using NASA's meteorite landing information, I investigated worldwide patterns in meteorite strikes. I filtered and cleaned the data using Pandas, then produced an interactive map showing the meteorite geographic distribution using Folium. I also used statistical analysis to search for patterns connected to meteorite mass, fall type (observed vs. found), and year. This project made me value how data may expose concealed patterns in natural events and showed me how to use mapping tools and data science to make interesting stories by means of visualization."
-    },
-    {
-        "title": "Product Usage Insights for After Hours",
-        "year": "2023",
-        "image": "../images/afterhours.jpg",
-        "description": "Working with a student team, I examined in-app activity data and survey results for After Hours, a productivity tool created for college students. I created visualizations to present our results to the development team, helped to locate important engagement drop-offs, and suggested feature changes to boost retention. The analysis guided a redesign of the app's onboarding process and helped to build the marketing plan. Working with actual user data to create a digital product more user-friendly and efficient was a worthwhile hands-on experience."
-
-
-    },
-    {
-        "title": "DS3: World Economic Forecasting with Time Series",
-        "year": "2017",
-        "image": "https://gmk.center/wp-content/uploads/2023/09/shutterstock_2154195865-1.png",
-        "description": "Working with a group at UCSD's Data Science Student Society on this FinTech-oriented research project, I predicted macroeconomic variables including GDP growth and inflation for nations including the United States, China, and India. From worldwide sources including the IMF and World Bank, we collected data, cleaned it, and created time series models applying ARIMA and exponential smoothing techniques. Dashboards helped me to see trends and contrast model performance. Predictive modeling, teamwork, and simplifying economic data for a larger audience were all areas in which this initiative enhanced my abilities."
-      },
-    {
-        "title": "Recusandae culpa accusamus repellendus?",
-        "image": "https://vis-society.github.io/labs/2/images/empty.svg",
-        "description": "Aut facilis possimus consequuntur placeat facere? Perspiciatis possimus reprehenderit aliquid eaque minima nemo sit nulla blanditiis illo, doloribus similique illum, quae repellendus impedit minus non quos officia ipsam vitae! Nemo?"
-    },
-    {
-        "title": "Laudantium doloremque modi cum.",
-        "image": "https://vis-society.github.io/labs/2/images/empty.svg",
-        "description": "Neque dolorum modi nisi optio at est et quasi provident dignissimos dolor nesciunt voluptatem harum tenetur reprehenderit, totam omnis, nostrum minus ea error, ducimus voluptate. Iusto quasi quaerat atque qui."
-    },
-    {
-        "title": "Quis ullam facilis officia?",
-        "image": "https://vis-society.github.io/labs/2/images/empty.svg",
-        "description": "Non vero ipsa provident voluptatum quidem atque consectetur iste suscipit reprehenderit laboriosam ab nobis ipsam mollitia tenetur numquam, pariatur reiciendis eius optio? Unde dolore molestias incidunt soluta, dolor commodi repudiandae."
-    },
-    {
-        "title": "Dicta eum ipsum adipisci.",
-        "image": "https://vis-society.github.io/labs/2/images/empty.svg",
-        "description": "Eius asperiores modi, nam voluptatum mollitia fugiat dignissimos nostrum, reiciendis dolorem porro quam vel aliquam id perspiciatis est. Culpa accusantium officia pariatur iure recusandae autem suscipit cum doloremque omnis delectus."
-    },
-    {
-        "title": "Doloribus expedita nostrum incidunt.",
-        "image": "https://vis-society.github.io/labs/2/images/empty.svg",
-        "description": "Blanditiis, voluptates maiores, itaque odio ad cupiditate optio quisquam sint adipisci officiis praesentium! Beatae eius non quisquam similique! Neque eius error illum velit sit pariatur hic. Repudiandae maxime eum quam."
-    },
-    {
-        "title": "Animi iure illum excepturi.",
-        "image": "https://vis-society.github.io/labs/2/images/empty.svg",
-        "description": "Nam hic incidunt, quasi voluptatibus accusamus placeat consequatur! Aliquam voluptatem sint deserunt ab enim hic, laboriosam fugit magni repellat aperiam veritatis quod magnam provident dignissimos expedita pariatur maxime molestias rem."
-    }
+  {
+    "title": "National Power Outage Duration Predictor",
+    "year": "2024",
+    "image": "https://media.wired.com/photos/61857ab5c4b863206a589936/master/pass/Gear-Prepare-for-Blackouts-1155510644.jpg",
+    "description": "I examined national power outage statistics for this initiative and applied regression models to forecast how long outages will continue depending on environmental and infrastructure elements including storm type, area, and utility company. I gathered data from FEMA, NOAA, and the U.S. Energy Information Administration, cleaned and combined the databases, and ran statistical tests to confirm theories. Using Python tools such as Seaborn and Plotly, I also displayed important results, which helped to highlight geographical differences and trends over time."
+  },
+  {
+    "title": "Taylor Swift Song Recommender",
+    "year": "2023",
+    "image": "https://s.yimg.com/ny/api/res/1.2/v6jVZokFHxbK7LoLHYaCkA--/YXBwaWQ9aGlnaGxhbmRlcjt3PTEyNDI7aD04ODM-/https://media.zenfs.com/en/men_s_journal_718/1565836d167d280f0e0e5e78d849b6ff",
+    "description": "Based on a user's mood or lyric preferences, I built a fun and tailored recommendation tool that recommends Taylor Swift songs. Using the Spotify API, I collected audio characteristics including tempo, energy, and danceability; I also included the Genius API so users could look up lyrics. To hone the suggestions, I used mood-based filters and cosine similarity. The project not only showed me how to use outside APIs but also provided me with knowledge creating algorithms linking human preferences with data. It was a fantastic opportunity to combine technical skills with imagination."
+  },
+  {
+    "title": "Geospatial Analysis",
+    "year": "2022",
+    "image": "https://nicholas.duke.edu/sites/default/files/styles/rectangle_765x500/public/images/GIS%20wildland%20fire%20potential%20map.jpg?itok=Tep43LCK",
+    "description": "Mapping environmental risk indices—such as air pollution, water quality, and health inequalities—across San Diego census tracts was my responsibility in this research. Starting with environmental and public health data, I used Principal Component Analysis (PCA) to lower dimensionality while maintaining significant patterns across variables. To show local level differences, I created interactive maps using OpenStreetMap and Leaflet among other mapping tools."
+  },
+  {
+    "title": "Meteorite Data Visualization",
+    "year": "2023",
+    "image": "https://news.fullerton.edu/app/uploads/2023/02/Mars-meteorite-800x500.jpg",
+    "description": "Using NASA's meteorite landing information, I investigated worldwide patterns in meteorite strikes. I filtered and cleaned the data using Pandas, then produced an interactive map showing the meteorite geographic distribution using Folium. I also used statistical analysis to search for patterns connected to meteorite mass, fall type (observed vs. found), and year. This project made me value how data may expose concealed patterns in natural events and showed me how to use mapping tools and data science to make interesting stories by means of visualization."
+  },
+  {
+    "title": "Product Usage Insights for After Hours",
+    "year": "2023",
+    "image": "../images/afterhours.jpg",
+    "description": "Working with a student team, I examined in-app activity data and survey results for After Hours, a productivity tool created for college students. I created visualizations to present our results to the development team, helped to locate important engagement drop-offs, and suggested feature changes to boost retention. The analysis guided a redesign of the app's onboarding process and helped to build the marketing plan. Working with actual user data to create a digital product more user-friendly and efficient was a worthwhile hands-on experience."
+  },
+  {
+    "title": "DS3: World Economic Forecasting with Time Series",
+    "year": "2017",
+    "image": "https://gmk.center/wp-content/uploads/2023/09/shutterstock_2154195865-1.png",
+    "description": "Working with a group at UCSD's Data Science Student Society on this FinTech-oriented research project, I predicted macroeconomic variables including GDP growth and inflation for nations including the United States, China, and India. From worldwide sources including the IMF and World Bank, we collected data, cleaned it, and created time series models applying ARIMA and exponential smoothing techniques. Dashboards helped me to see trends and contrast model performance. Predictive modeling, teamwork, and simplifying economic data for a larger audience were all areas in which this initiative enhanced my abilities."
+  },
+  {
+    "title": "BikeTrax: Boston BlueBike Traffic Visualization",
+    "year": "2025",
+    "image":  "../images/biketrax.jpg",
+    "url": "https://manasamaddi1.github.io/Biketrax/",
+    "description": "BikeTrax is an interactive Mapbox-powered web app that visualizes real-time BlueBike station traffic in Boston. I integrated station data and trip traffic from March 2024, then visualized it using D3 with interactive filters. Users can hover over dots to see exact station traffic, adjust a time slider to observe changing traffic patterns throughout the day, and view color-coded flow direction—more departures or arrivals—across the city. This project helped me connect geospatial design with user interaction, while also teaching me how to layer information meaningfully on a map interface."
+  },
+  {
+    "title": "Recusandae culpa accusamus repellendus?",
+    "image": "https://vis-society.github.io/labs/2/images/empty.svg",
+    "description": "Aut facilis possimus consequuntur placeat facere? Perspiciatis possimus reprehenderit aliquid eaque minima nemo sit nulla blanditiis illo, doloribus similique illum, quae repellendus impedit minus non quos officia ipsam vitae! Nemo?"
+  },
+  {
+    "title": "Laudantium doloremque modi cum.",
+    "image": "https://vis-society.github.io/labs/2/images/empty.svg",
+    "description": "Neque dolorum modi nisi optio at est et quasi provident dignissimos dolor nesciunt voluptatem harum tenetur reprehenderit, totam omnis, nostrum minus ea error, ducimus voluptate. Iusto quasi quaerat atque qui."
+  },
+  {
+    "title": "Quis ullam facilis officia?",
+    "image": "https://vis-society.github.io/labs/2/images/empty.svg",
+    "description": "Non vero ipsa provident voluptatum quidem atque consectetur iste suscipit reprehenderit laboriosam ab nobis ipsam mollitia tenetur numquam, pariatur reiciendis eius optio? Unde dolore molestias incidunt soluta, dolor commodi repudiandae."
+  },
+  {
+    "title": "Dicta eum ipsum adipisci.",
+    "image": "https://vis-society.github.io/labs/2/images/empty.svg",
+    "description": "Eius asperiores modi, nam voluptatum mollitia fugiat dignissimos nostrum, reiciendis dolorem porro quam vel aliquam id perspiciatis est. Culpa accusantium officia pariatur iure recusandae autem suscipit cum doloremque omnis delectus."
+  },
+  {
+    "title": "Doloribus expedita nostrum incidunt.",
+    "image": "https://vis-society.github.io/labs/2/images/empty.svg",
+    "description": "Blanditiis, voluptates maiores, itaque odio ad cupiditate optio quisquam sint adipisci officiis praesentium! Beatae eius non quisquam similique! Neque eius error illum velit sit pariatur hic. Repudiandae maxime eum quam."
+  },
+  {
+    "title": "Animi iure illum excepturi.",
+    "image": "https://vis-society.github.io/labs/2/images/empty.svg",
+    "description": "Nam hic incidunt, quasi voluptatibus accusamus placeat consequatur! Aliquam voluptatem sint deserunt ab enim hic, laboriosam fugit magni repellat aperiam veritatis quod magnam provident dignissimos expedita pariatur maxime molestias rem."
+  }
 ]
